<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_weight="1"
    app:cardBackgroundColor="@android:color/background_light"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/coinIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/icon_coin"
                android:scaleType="center" />

            <TextView
                android:id="@+id/coinName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/label_name"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_profit" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_price"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/holdings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_holdings" />

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>